fix invalid JSON
composer file had an invalid
trailing comma

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Ben McManus",
+            "name": "Ben McManus"
         }
     ],
     "require": {
